welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a1>=0 && b1>=0 && c1>=0) return ((a1>c1 && a1>b1)||(b1>a1&&b1>c1)||(c1>a1&&c1>b1))} 
  ^